--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,13 @@
             <artifactId>spring-context</artifactId>
             <version>6.1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.9.3</version>
+        </dependency>
+
     </dependencies>
+
 </project>
