--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     username: postgres
-    password: MensShop
+    password: 2005b
     url: jdbc:postgresql://localhost:5432/postgres
   jpa:
     hibernate:
